  * The frame attributes ('selection', 'algorithm', 'fraction', 'split_type')
    are now writable.
  * New objects for panels (under 'panels', exposing attributes 'instance',
    'class', 'geometry', 'winid')
  * The setting 'monitors_locked' is now explicitly an unsigned integer.
  * The setting 'default_frame_layout' now holds an algorithm name.
  * The 'shift' command now moves the window to a neighboured monitor if
    the window cannot be moved within a tag in the desired direction.
  * New command 'lower' to lower a window in the stack.
  * The 'cycle_value' command now expects an attribute (and only works for
    settings for compatibility).
  * New object 'types' containing documentation on (attribute-) types.
  * Relative values for integer attributes ('+=N' and '-=N')
  * The 'cycle' command now also cycles through floating windows.
  * Bug fixes:
    - Fix mistakenly transparent borders of argb clients
  * New dependency: xrender

Release 0.9.2 on 2021-02-17
---------------------------

  * Client window titles (controlled by the theme attributes 'title_height',
    'title_color', 'title_font')
  * New command 'help' for live documentation on the object tree
  * New 'watch' command that emits hooks when attribute values change.
  * The 'lock_tag' attribute is now writable.
  * New 'geometry' attribute for monitors.
  * Bug fixes:
    - Correctly interpret _NET_WM_STRUT. This fixes panels that leave a bit of
      space between the panel and the monitor edge and also panels between two
      monitors.
    - Correctly handling minimized clients when removing a tag.
    - Preserve stacking order when changing the floating state of a tag
    - Update frame objects correctly in the commands 'mirror' and 'rotate'
  * New dependencies: xft, freetype

Release 0.9.1 on 2020-12-28
---------------------------

  * Client minimization (controlled by the attribute 'minimized' of every client)